fix build issue

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "parcel src/pages/*.html --out-dir=tmp",
     "start:prototype": "parcel src/prototype.html --out-dir=tmp",
-    "build": "parcel build src/index.html --out-dir=dist --public-url='./'",
+    "build": "parcel build src/pages/index.html --out-dir=dist --public-url='./'",
     "lint:styles": "stylelint **/*.scss"
   },
   "keywords": [],
