--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "parcel src/pages/*.pug",
-    "start:prototype": "parcel src/prototype.pug --out-dir=tmp",
-    "build": "parcel build src/pages/*.pug --out-dir=dist --public-url='./'",
+    "build": "webpack --mode=production",
+    "build:dev": "webpack --mode=development",
+    "start:dev": "webpack serve --hot --mode=development",
     "lint:styles": "stylelint **/*.scss"
   },
   "keywords": [],
@@ -14,14 +14,32 @@
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "latest",
     "autoprefixer": "9.8",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.0",
     "husky": "^4.3.0",
     "node-sass": "^4.14.1",
     "parcel-bundler": "latest",
+    "postcss": "^8.2.1",
+    "postcss-loader": "^4.1.0",
     "postcss-modules": "latest",
     "postcss-preset-env": "^6.7.0",
     "posthtml-include": "^1.6.0",
+    "pug-loader": "^2.4.0",
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
     "stylelint": "^13.7.2",
-    "stylelint-config-standard": "^20.0.0"
+    "stylelint-config-standard": "^20.0.0",
+    "svg-sprite-loader": "^5.2.1",
+    "svg-spritemap-webpack-plugin": "^3.8.2",
+    "svgo-loader": "^2.2.1",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.11.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "core-js": "latest",
