--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
   },
   "dependencies": {
     "core-js": "latest",
+    "drift-zoom": "^1.4.1",
     "jquery": "^3.5.1",
     "owl.carousel": "^2.3.4",
     "parcel-plugin-svg-sprite": "^1.4.1",
     "pug": "^3.0.0",
+    "pug-html-loader": "^1.1.5",
     "slick-carousel": "^1.8.1"
   }
 }
